Closed Bug 739969 Opened 13 years ago Closed 13 years ago

Regression: Fixedpoint division in blur code was replaced to integer division

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: tete, Assigned: joe)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:11.0) Gecko/20100101 Firefox/11.0 Build ID: 20120312181643 Steps to reproduce: In Bug 685767, we moved innards of gfxAlphaBoxBlur to mozilla::gfx::AlphaBoxBlur. Actual results: Fixedpoint division introduced by Bug 633627 was replaced to integer division by Bug 685767. Expected results: We should apply the patch of fixedpoint division of Bug 633627 again.
Component: Untriaged → Graphics
Depends on: 685767, 633627
Keywords: regression
OS: Windows 7 → All
Product: Firefox → Core
Hardware: x86_64 → All
No longer depends on: 633627, 685767
Assignee: nobody → joe
QA Contact: untriaged → thebes
This is just taking the patch from bug 633627 and applying it to gfx/2d/Blur.cpp.
Attachment #610225 - Flags: review?(jmuizelaar)
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #610225 - Flags: review?(jmuizelaar) → review+
Keywords: checkin-needed
Flags: in-testsuite?
Keywords: checkin-needed
Target Milestone: --- → mozilla14
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: