Bug 739969 - Port patch from bug 633627 to use fixed point division instead of integer. r=jmuizelaar